# brante-access

./: .gitignore  BranteAccess.slnx  CLAUDE.md  DECISIONS.md  KEYS.md  README.md  ROADMAP.md  build.ps1  package.ps1  setup-bepinex.ps1
.claude/: settings.json
lang/de/: settings.txt  ui.txt
lang/en/: settings.txt  ui.txt
lang/es-ES/: settings.txt  ui.txt
lang/es-US/: settings.txt  ui.txt
lang/fr-FR/: settings.txt  ui.txt
lang/it/: settings.txt  ui.txt
lang/ja/: settings.txt  ui.txt
lang/ko/: settings.txt  ui.txt
lang/pl/: settings.txt  ui.txt
lang/pt-BR/: settings.txt  ui.txt
lang/ru/: settings.txt  ui.txt
lang/tr/: settings.txt  ui.txt
lang/zh-CN/: settings.txt  ui.txt
lang/zh-TW/: settings.txt  ui.txt
reference/disco-elysium/: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Directory.Build.props  NonVisualCalculus.slnx  README.md  build-installer.ps1  build.ps1  build_release.ps1  create-release.ps1  setup-bepinex.ps1  test-installer.ps1
reference/wotr-access/: .gitattributes  .gitignore  CLAUDE.md  LICENSE  OwlcatModificationManifest.json  README.md  THIRD-PARTY-NOTICES.md  WrathAccess.csproj  build_docs.ps1  deploy.ps1  getting-started.md
reference/wotr-access/installer/: Cargo.toml  README.md  app.manifest  build.rs
reference/wotr-access/installer/src/: cli.rs  gui.rs  main.rs
reference/wotr-access/installer/src/core/: detect.rs  github.rs  install.rs  manager.rs  mod.rs  paths.rs  uninstall.rs
scripts/: BranteGameLocator.ps1  advance.sh  package-readme.txt  package-third-party.txt  package.proj  sweep.sh
(+694 files in other folders)
