[package]
name = "wrath-access-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
wxdragon = "0.9"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
regex = "1"
dirs = "6"
rfd = "0.15"
semver = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[build-dependencies]
embed-resource = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
